[lib]
name = "rapid_fuzz"

[[bin]]
name = "rapid-fuzz"
path = "src/test.rs"

[package]
name = "rapid-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["default"] }
deterministic = "0.1.2"
rand = { version = "0.9.0", features = [] }
rand_chacha = "0.9.0"
